// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieListContainer - test component MovieList: renders correctly with empty results 1`] = `
<section
  className="movieList"
>
  <div
    className="container"
  >
    <div
      className="moviesSelector"
    >
      <ul>
        <li>
          <button
            href="#"
            onClick={[Function]}
            type="button"
          >
            Trending
          </button>
        </li>
        <li>
          <button
            href="#"
            onClick={[Function]}
            type="button"
          >
            Top Rated
          </button>
        </li>
        <li>
          <button
            href="#"
            onClick={[Function]}
            type="button"
          >
            Coming Soon
          </button>
        </li>
        <li>
          <select
            id=""
            name="genre"
            onChange={[Function]}
          >
            <option
              value=""
            >
              Genre
            </option>
          </select>
        </li>
      </ul>
    </div>
    <div
      className="moviesWrapper"
    />
  </div>
</section>
`;

exports[`MovieListContainer - test component MovieList: renders correctly with empty results 2`] = `
<section
  className="movieList"
>
  <div
    className="container"
  >
    <div
      className="moviesSelector"
    >
      <ul>
        <li>
          <button
            href="#"
            onClick={[Function]}
            type="button"
          >
            Trending
          </button>
        </li>
        <li>
          <button
            href="#"
            onClick={[Function]}
            type="button"
          >
            Top Rated
          </button>
        </li>
        <li>
          <button
            href="#"
            onClick={[Function]}
            type="button"
          >
            Coming Soon
          </button>
        </li>
        <li>
          <select
            id=""
            name="genre"
            onChange={[Function]}
          >
            <option
              value=""
            >
              Genre
            </option>
          </select>
        </li>
      </ul>
    </div>
    <div
      className="moviesWrapper"
    >
      <article
        className="movieContainer"
        id={299534}
      >
        <figure>
          <div>
            <img
              alt="Avengers: Endgame"
              src="https://api.ballotpedia.org/v3/thumbnail/"
            />
          </div>
          <figcaption>
            <div
              className="movieTitle"
            >
              <button
                href="#"
                id="movieTitle"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex="0"
                type="button"
              >
                Avengers: Endgame
              </button>
              <span>
                8.6
              </span>
            </div>
            <div
              className="movieGenres"
            >
              <ul>
                <li>
                  <button
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    ,
                  </button>
                </li>
                <li>
                  <button
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    ,
                  </button>
                </li>
                <li>
                  <button
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    
                  </button>
                </li>
              </ul>
            </div>
          </figcaption>
        </figure>
        <div
          className="hoverMovie"
        >
          <div
            className="hoverControl"
          >
            <label
              htmlFor="playTrailer"
              id="playTrailer"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <input
                className="playTrailer"
                name="playTrailer"
                type="button"
              />
              Watch Now
            </label>
            <button
              className="showOverwie"
              id="showOverwie"
              onClick={[Function]}
              type="button"
            >
              View Info
            </button>
          </div>
          <div
            className="hoverOverwie"
            onMouseLeave={[Function]}
          >
            <button
              className="hoverClose"
              id="closeHover"
              onClick={[Function]}
              type="button"
            >
              ╳
            </button>
            <div
              className="hoverOverwieTitle"
            >
              <div
                className="hoverOverwieTitleItem"
              >
                <h3>
                  Avengers: Endgame
                </h3>
                <ul>
                  <li>
                    <button
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      ,
                    </button>
                  </li>
                  <li>
                    <button
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      ,
                    </button>
                  </li>
                  <li>
                    <button
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      
                    </button>
                  </li>
                </ul>
              </div>
              <div
                className="hoverOverwieTitleItem"
              >
                <p>
                  8.6
                </p>
              </div>
            </div>
            <p>
              After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos' actions and restore order to the universe once and for all, no matter what consequences may be in store.
            </p>
            <button
              id="watch"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              Watch Now
            </button>
          </div>
        </div>
      </article>
    </div>
  </div>
</section>
`;
